# ddmatch

./: .gitignore  CMakeLists.txt  Dockerfile  GPU.md  README.md  TODO.txt  build_docker.sh  build_in_docker.sh  difforma_base_example.ipynb  vcpkg_export.sh
Example2/: example2.py
difforma_base/: __init__.py  core.py
runtime/: build.bat  build.sh  build_debug.sh  clean.sh  density.json  run_1.json  settings.json  skew.json  wipe.sh
scripts/: build.sh  container_build.sh  container_cmake.sh  docker_build.sh  docker_cmake.sh  docker_create_build.sh  vcpkg_install_libraries.sh
src/cpp/: CMakeLists.txt
src/cpp/UnitTests/core/: CMakeLists.txt
src/cpp/UnitTests/ddmatch/: CMakeLists.txt  main.cpp
src/cpp/apps/: CMakeLists.txt
src/cpp/apps/create_density/: CMakeLists.txt  main.cpp
src/cpp/apps/create_skew/: CMakeLists.txt  main.cpp
src/cpp/apps/cufft/: CMakeLists.txt  add_loop_gpu.cu  extendedCUFFT.cu  extendedCUFFT.h  helloCUFFT.cu  simpleCUFFT.cu  simpleCall.cu  vectorAdd.cu
src/cpp/apps/cufft_solver/: CMakeLists.txt  main.cpp
src/cpp/apps/example/: CMakeLists.txt  main.cpp
src/cpp/apps/fft/: CMakeLists.txt
src/cpp/apps/plt/: CMakeLists.txt  main.cpp
src/cpp/apps/resize/: CMakeLists.txt
src/cpp/apps/solver/: CMakeLists.txt  config_solver.h  examples.h  main.cpp
src/cpp/core/: MyArrays.h  MyFft.h  MyFftSolver.h  MyVec.h
src/cpp/ddmatch/: CMakeLists.txt  DiffeoFunctionMatching.cpp  DiffeoFunctionMatching.h  Diffeo_functions.cpp  Diffeo_functions.h
src/cpp/ddmatch_gpu/: CMakeLists.txt  extendedCUFFT.cu  extendedCUFFT.h
src/cpp/image/: CMakeLists.txt  Image.h  Image_funcs.h  Image_storage.h
src/cpp/utils/: CMakeLists.txt  helper_cuda.h  helper_functions.h  helper_image.h  helper_timer.h  parse_json.h  shared.h  to_file.h  to_grid.cpp  to_grid.h  to_image.cpp  to_image.h
